--- a/team-page/src/App.css
+++ b/team-page/src/App.css
@@ -2,6 +2,10 @@
   color:#c7d2db; 
 }
 
+.blue-color {
+  color:#63a6e1; 
+}
+
 .dark-background {
   background: #222;
 }
@@ -14,6 +18,7 @@ body {
   font-family: 'Ubuntu', sans-serif;
   background-color: #c7d2db;
   height:100%;
+  text-align: center;
 }
 
 button {
@@ -250,22 +255,53 @@ button:hover {
   font-size: large;
 }
 
-
 .Team-Header {
   font-size: 70px; 
   text-align: center;
   padding: 10px;
+  width:1000px;
+  margin-left:auto;
+  margin-right:auto;
+}
+
+.People {
+  display: inline-block;
+  width:1000px;
+  margin-left:auto;
+  margin-right:auto;
+  padding-bottom: 30px;
+  padding-top: 20px;
 }
 
 .Person {
-  width: 30%;
+  width: 17%;
   margin: 20px;
-  padding: 10px;
+  padding: 20px;
+  padding-top: 10px; 
+  padding-bottom: 10px; 
   display: block;
+  float: left;
+}
+
+
+.person-img {
+  height: 30px;
+  width: 30px; 
+  float: left;
+}
+
+.person-img:hover {
+  border-radius: 50%;
+  border-style: solid; 
+  border-width: 2px; 
+  border-color: #bf4d28;
+  height: 26px; 
+  width: 26px;
 }
 
 .person-item {
   text-align:center;
+  padding-top: 10px;
 }
 
 .person-contact-items {
@@ -278,6 +314,68 @@ button:hover {
 .person-contact-item {
   float: left;
   padding: 10px;
+}
+
+.person-title {
+  font-size: 12px;
+}
+
+.profile {
+  height: 120px; 
+  width: 120px; 
+  border-radius: 50%;
+}
+
+.person-name {
+  font-size: 16px;
+}
+
+.big-icons {
+  height: 30px;
+  width: 30px;
+}
+
+.big-profile {
+  border: solid 2px #bf4d28;
+  height: 116px; 
+  width: 117px;
+}
+
+.mainpage-coverphoto {
+  width: 240px;
+  height:400px;
+}
+
+.Team-Header {
+  background-image: url('./cover_photo_team.jpg');
+  background-size: 100%; 
+  width:940px;
+  height:600px;
+  margin-left:auto;
+  margin-right:auto;
+  text-align:center;
+}
+
+.team-cover-text {
+  width: 940px;
+  display:inline-block;
+  background-color: none;
+  color:#bf4d28; 
+  padding-top: 30px; 
+  padding-bottom: 30px;
+  margin-left:auto; 
+  margin-right:auto;
+  margin-top:30px;
+  margin-bottom:auto;
+  font-size:50px;
+}
+
+.coverphototeam {
+  width: 500px;
+  height: 500px;
+  border-radius: 50%;
+  -webkit-transition: hidden 5s; /* Safari */
+  transition: hidden 5s;
 }
 
 @keyframes App-logo-spin {
