--- a/team-page/src/App.css
+++ b/team-page/src/App.css
@@ -79,60 +79,6 @@ button:hover {
   font-weight: bold; 
 }
 
-.About {
-  width:1000px;
-  margin: 15px; 
-  margin-left:auto;
-  margin-right:auto;
-  text-align:left;
-  background:#222;
-  color: #63a6e1;
-}
-
-.About-paragraph {
-  padding: 30px; 
-  padding-top: 0px; 
-  margin: 0 30px; 
-  font-size: 18px;
-  text-align: center;
-}
-
-.about-element {
-  width: 33%;
-  float: left;
-}
-
-.location-date-time{
-  font-size: 20px;
-  margin: 0 auto; 
-  display: inline-block;
-  width: 100%;
-}
-
-.about-item-text {
-  padding-right: 50px; 
-}
-
-.about-text {
-  margin: 0 80px; 
-  padding-bottom: 15px;
-}
-
-.about-item {
-  height:40px; 
-  width:40px;
-  padding-right:15px;
-  padding-bottom:0px;
-  padding-top: 0px;
-  vertical-align:middle;
-}
-
-.Contact.About {
-  text-align: center;
-  padding-top: 10; 
-  padding-bottom: 10px; 
-}
-
 .contact-items {
   display: inline-block;
   margin:0 auto 0 auto; 
@@ -155,17 +101,6 @@ button:hover {
   border-radius: 10px;
 }
 
-.logo {
-  vertical-align:middle;
-}
-
-.title {
-  color: #bf4d28;
-  margin-left: 50px; 
-  font-size: 18px;
-  vertical-align: middle;
-  padding-top: 5px;
-}
 
 .column {
   display:flex;
@@ -218,18 +153,16 @@ button:hover {
   font-size: 70px; 
   text-align: center;
   padding: 10px;
-  width:1000px;
+  width:70%;
   margin-left:auto;
   margin-right:auto;
 }
 
 .People {
   display: inline-block;
-  width:1000px;
-  margin-left:auto;
-  margin-right:auto;
+  width:80%;
+  margin:0 auto; 
   padding-bottom: 30px;
-  padding-top: 20px;
 }
 
 .Person {
@@ -240,6 +173,8 @@ button:hover {
   padding-bottom: 10px; 
   display: block;
   float: left;
+  min-width: 150px; 
+  max-width: 200px; 
 }
 
 
@@ -307,7 +242,7 @@ button:hover {
 
 .Team-Header {
   background-size: 100%; 
-  width:940px;
+  width:70%;
   height:600px;
   margin-left:auto;
   margin-right:auto;
@@ -315,7 +250,7 @@ button:hover {
 }
 
 .team-cover-text {
-  width: 940px;
+  width: 70%;
   display:inline-block;
   background-color: none;
   color:#bf4d28; 
@@ -323,7 +258,7 @@ button:hover {
   padding-bottom: 30px;
   margin-left:auto; 
   margin-right:auto;
-  margin-top:30px;
+  margin-top:auto;
   margin-bottom:auto;
   font-size:50px;
 }
@@ -336,7 +271,23 @@ button:hover {
   transition: hidden 5s;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+@media only screen and (max-width: 1300px) {
+  .Person {
+    width: 25%; 
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  .People {
+    width: 60%; 
+  }
+
+  .Person {
+    width: 17%; 
+  }
+
+  .team-cover-text {
+    font-size: 30px; 
+    width: 60%; 
+  }
 }
