--- a/team-page/src/App.css
+++ b/team-page/src/App.css
@@ -271,9 +271,40 @@ button:hover {
   transition: hidden 5s;
 }
 
+.Carousel-div {
+  width: 1100px;
+  margin: 0 auto; 
+  font-family: 'Ubuntu', sans-serif !important;
+  background-color: #c7d2db !important;
+}
+
+.carousel .slide { 
+  height: 700px;
+  background-color: #c7d2db;
+}
+
+.carousel .slide .legend, .control-arrow {
+  background: #bf4d28 !important;
+  color: #c7d2db !important;
+}
+
+.carousel .thumb.selected, .carousel .thumb:hover {
+  border: 3px solid #bf4d28  !important;
+}
+
 @media only screen and (max-width: 1300px) {
   .Person {
     width: 25%; 
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  .Carousel-div {
+    width: 800px;
+  }
+
+  .carousel .slide { 
+    height: 530px;
   }
 }
 
@@ -290,4 +321,27 @@ button:hover {
     font-size: 30px; 
     width: 60%; 
   }
+
+  .Carousel-div {
+    width: 600px;
+  }
+
+  .carousel .slide { 
+    height: 380px;
+  }
 }
+
+@media only screen and (max-width: 700px) {
+  .Carousel-div {
+    width: 400px;
+  }
+
+  .carousel .slide { 
+    height: 250px;
+  }
+
+  .legend{
+    visibility: hidden !important; 
+  }
+}
+
