--- a/team-page/src/common/header.css
+++ b/team-page/src/common/header.css
@@ -1,8 +1,7 @@
-
 body {
   position: relative;
   margin: 0;
-  padding-bottom: 130px;
+  padding-bottom: 110px;
   min-height: 100%;
 }
 
@@ -10,6 +9,7 @@ body {
   height: 40px; 
   padding: 20px;
   padding-right: 0px;
+  padding-left: 0px; 
   color: white;
   background-color: white;
   border-bottom: solid 2px #63a6e1; 
@@ -17,8 +17,10 @@ body {
 }
 
 .footer {
-  height: 100px;
+  height: 80px;
   padding: 15px;
+  padding-right: 0px; 
+  padding-left: 0px; 
   font-size: 18px; 
   display:flex;
   flex-direction:row;
@@ -176,9 +178,10 @@ a {
   }
 
   .tab-row {
-    padding-left: 20px; 
-    padding-right: 20px; 
+    padding-left: 5px; 
+    padding-right: 5px; 
     width: 100%;
+    margin-left: 10px; 
   }
 
   .App-header {
@@ -189,14 +192,23 @@ a {
     width: 22%; 
     margin-bottom: 10px; 
     height: 25px; 
+    font-weight: bold;
   }
 }
 
 @media only screen and (max-width: 500px) {
-  .footer-contact, .footer-events {
+  .footer-contact, .footer-events, .footerlogo {
     visibility: hidden;
     width: 0px; 
     height: 0px; 
+  }
+
+  .footer {
+    height: 15px; 
+  }
+
+  body {
+    padding-bottom: 45px; 
   }
 
   .footer-name {
@@ -206,4 +218,18 @@ a {
   }
 }
 
+@media only screen and (max-width: 400px) {
+  .square {
+    font-size: 11px; 
+  }
+}
 
+@media only screen and (max-width: 350px) {
+  .square {
+    width: 40%; 
+  }
+
+  .App-header {
+    height: 150px;  
+  }
+}
